[gd_scene load_steps=4 format=2]

[ext_resource path="res://Components/brain/brain.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[node name="brain" type="Node2D"]
script = ExtResource( 2 )
TOLERANCE = 5
THINK_TIME = 0.1
general_springs = {
"friendly": -1,
"hostile": 0,
"neutral": -1
}

[node name="idle_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="wander_timer" type="Timer" parent="."]
one_shot = true

[node name="memory_timer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true
autostart = true

[node name="action_timer" type="Timer" parent="."]
autostart = true

[node name="think_timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="sight" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="sight"]
shape = SubResource( 1 )

[node name="warning" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="warning"]
visible = false
shape = SubResource( 2 )
[connection signal="tree_entered" from="." to="." method="_on_brain_tree_entered"]
[connection signal="timeout" from="idle_timer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="wander_timer" to="." method="_on_wander_timer_timeout"]
[connection signal="timeout" from="memory_timer" to="." method="_on_memory_timer_timeout"]
[connection signal="timeout" from="action_timer" to="." method="_on_action_timer_timeout"]
[connection signal="timeout" from="think_timer" to="." method="_on_think_timer_timeout"]
[connection signal="body_entered" from="sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="sight" to="." method="_on_sight_body_exited"]
[connection signal="area_entered" from="warning" to="." method="_on_warning_area_entered"]
